fix win search position

--- a/adm/style/acp_live_search.html
+++ b/adm/style/acp_live_search.html
@@ -79,6 +79,10 @@
 			<dt><label for="live_search_show_in_new_window">{L_LIVE_SEARCH_SHOW_IN_NEW_WINDOW}:</label></dt>
 			<dd><label><input type="radio" name="live_search_show_in_new_window" value="1" <!-- IF LIVE_SEARCH_SHOW_IN_NEW_WINDOW -->checked<!-- ENDIF --> class="radio"> {L_YES}</label><label><input type="radio" name="live_search_show_in_new_window" value="0" <!-- IF !LIVE_SEARCH_SHOW_IN_NEW_WINDOW -->checked<!-- ENDIF --> class="radio"> {L_NO}</label></dd>
 		</dl>
+        <dl>
+			<dt><label for="live_search_show_for_guest">{L_LIVE_SEARCH_SHOW_FOR_GUEST}:</label></dt>
+			<dd><label><input type="radio" name="live_search_show_for_guest" value="1" <!-- IF LIVE_SEARCH_SHOW_FOR_GUEST -->checked<!-- ENDIF --> class="radio"> {L_YES}</label><label><input type="radio" name="live_search_show_for_guest" value="0" <!-- IF !LIVE_SEARCH_SHOW_FOR_GUEST -->checked<!-- ENDIF --> class="radio"> {L_NO}</label></dd>
+		</dl>
     </fieldset>
 	<p class="submit-buttons">
 		<input class="button1" type="submit" id="submit" name="submit" value="{L_SUBMIT}" />&nbsp;
