--- a/adm/style/event/acp_overall_footer_after.html
+++ b/adm/style/event/acp_overall_footer_after.html
@@ -1,1 +1,33 @@
-	<!-- INCLUDEJS acp_live_search.js -->
+<script type="text/javascript" >
+    var minChars_forum = '{MIN_CHARS_FORUM}';
+    var minChars_user = '{MIN_CHARS_USER}';
+    var U_USER_LS_ACP_PATH = '{U_USER_LS_ACP_PATH}';
+
+//    var U_FORUM_LS_PATH = '{U_FORUM_LS_PATH}';
+//    var U_TOPIC_LS_PATH = '{U_TOPIC_LS_PATH}';
+//    var U_SIMILARTOPIC_LS_PATH = '{U_SIMILARTOPIC_LS_PATH}';
+//    var U_USER_LS_PATH = '{U_USER_LS_PATH}';
+//    var U_USERTOPIC_LS_PATH = '{U_USERTOPIC_LS_PATH}';
+//    var U_USER_PM_LS_PATH = '{U_USER_PM_LS_PATH}';
+//    var U_MEMBERLIST_LS_PATH = '{U_MEMBERLIST_LS_PATH}';
+//    var U_UCP_LS_PATH = '{U_UCP_LS_PATH}';
+
+
+//    var U_FORUM_REDIRECT = '{U_FORUM_REDIRECT}';
+//    var U_TOPIC_REDIRECT = '{U_TOPIC_REDIRECT}';
+
+//    var minChars_topic = '{MIN_CHARS_TOPIC}';
+//    var minChars_user = '{MIN_CHARS_USER}';
+
+//    var maxItemsToShow_forum = '{MAX_ITEMS_TO_SHOW_FORUM}';
+//    var maxItemsToShow_topic = '{MAX_ITEMS_TO_SHOW_TOPIC}';
+//    var maxItemsToShow_user = '{MAX_ITEMS_TO_SHOW_USER}';
+
+//    var LIVE_SEARCH_SHOW_IN_NEW_WINDOW = '{LIVE_SEARCH_SHOW_IN_NEW_WINDOW}';
+//    var LIVE_SEARCH_EYE_BUTTON_OPEN_T = '{LIVE_SEARCH_EYE_BUTTON_OPEN_T}';
+//    var LIVE_SEARCH_EYE_BUTTON_CLOSE_T = '{LIVE_SEARCH_EYE_BUTTON_CLOSE_T}';
+
+</script>
+<!-- INCLUDECSS jquery.autocomplete.css -->
+<!-- INCLUDEJS jquery.autocomplete.js -->
+<!-- INCLUDEJS acp_live_search.js -->
