--- a/adm/style/acp_live_search.html
+++ b/adm/style/acp_live_search.html
@@ -73,6 +73,27 @@
 	        </dl>        
         </fieldset>
     </div>   
+
+    <input type="checkbox" id= "live_search_on_off_similartopic" name="live_search_on_off_similartopic"  class="radio" {CHECKED_SIMILARTOPIC}  />{L_LIVE_SEARCH_SIMILARTOPIC_ON}
+   <div id='setting_st'>
+        <fieldset>
+	        <legend>{L_ACP_LIVE_SEARCH_SETTINGS_SIMILARTOPICS}</legend>
+            <dl>
+		        <dt><label for="live_search_min_num_symblols_user">{L_LIVE_SEARCH_MIN_NUM_SYMBLOLS}:</label><br /> 
+                    <span>{L_LIVE_SEARCH_MIN_NUM_SYMBLOLS_EXPLAIN}</span>
+                </dt>
+		        <dd><input type="number" id="live_search_min_num_symblols_similartopic" name="live_search_min_num_symblols_similartopic"  min="1" max="5" value='{LIVE_SEARCH_MIN_NUM_SYMBLOLS_SIMILARTOPIC}'   /></dd>
+	        </dl>        
+            <dl>
+		        <dt><label for="live_search_max_items_to_show_user">{L_LIVE_SEARCH_MAX_ITEMS_TO_SHOW}:</label><br /> 
+                    <span>{L_LIVE_SEARCH_MAX_ITEMS_TO_SHOW_EXPLAIN}</span>
+                </dt>
+		        <dd><input type="number" id="live_search_max_items_to_show_similartopic" name="live_search_max_items_to_show_similartopic"  min="1" max="50" value='{LIVE_SEARCH_MAX_ITEMS_TO_SHOW_SIMILARTOPIC}'   /></dd>
+	        </dl>        
+        </fieldset>
+    </div>   
+
+
     <fieldset>
         <legend></legend>
         <dl>
