Fix for colon in other language than english (like french)
- update for acp_live_search.html file
- update for overall_header_page_body_before.html file
- update for posting_pm_header_find_username_after.html file

--- a/adm/style/acp_live_search.html
+++ b/adm/style/acp_live_search.html
@@ -16,18 +16,18 @@
 
 <form id="acp_live_search" method="post" action="{U_ACTION}">
     
-    <input type="checkbox" id= "live_search_on_off_forum" name="live_search_on_off_forum"  class="radio" {CHECKED_FORUM}  />{L_LIVE_SEARCH_FORUM_ON}
+    <input type="checkbox" id= "live_search_on_off_forum" name="live_search_on_off_forum"  class="radio" {CHECKED_FORUM}  />&nbsp;{L_LIVE_SEARCH_FORUM_ON}
     <div id='setting_f'>
         <fieldset >
 	        <legend>{L_ACP_LIVE_SEARCH_SETTINGS_FORUMS}</legend>
             <dl>
-		        <dt><label for="live_search_min_num_symblols_forum">{L_LIVE_SEARCH_MIN_NUM_SYMBLOLS}:</label><br /> 
+		        <dt><label for="live_search_min_num_symblols_forum">{L_LIVE_SEARCH_MIN_NUM_SYMBLOLS}{L_COLON}</label><br /> 
                     <span>{L_LIVE_SEARCH_MIN_NUM_SYMBLOLS_EXPLAIN}</span>
                 </dt>
 		        <dd><input type="number" id="live_search_min_num_symblols_forum" name="live_search_min_num_symblols_forum"  min="1" max="5" value='{LIVE_SEARCH_MIN_NUM_SYMBLOLS_FORUM}'   /></dd>
 	        </dl>        
             <dl>
-		        <dt><label for="live_search_max_items_to_show_forum">{L_LIVE_SEARCH_MAX_ITEMS_TO_SHOW}:</label><br /> 
+		        <dt><label for="live_search_max_items_to_show_forum">{L_LIVE_SEARCH_MAX_ITEMS_TO_SHOW}{L_COLON}</label><br /> 
                     <span>{L_LIVE_SEARCH_MAX_ITEMS_TO_SHOW_EXPLAIN}</span>
                 </dt>
 		        <dd><input type="number" id="live_search_max_items_to_show_forum" name="live_search_max_items_to_show_forum"  min="1" max="50" value='{LIVE_SEARCH_MAX_ITEMS_TO_SHOW_FORUM}'   /></dd>
@@ -35,18 +35,18 @@
         </fieldset>
     </div>
 
-   <input type="checkbox" id= "live_search_on_off_topic" name="live_search_on_off_topic"  class="radio" {CHECKED_TOPIC}  />{L_LIVE_SEARCH_TOPIC_ON}
+   <input type="checkbox" id= "live_search_on_off_topic" name="live_search_on_off_topic"  class="radio" {CHECKED_TOPIC}  />&nbsp;{L_LIVE_SEARCH_TOPIC_ON}
     <div id='setting_t'>
         <fieldset>
 	        <legend>{L_ACP_LIVE_SEARCH_SETTINGS_TOPICS}</legend>
             <dl>
-		        <dt><label for="live_search_min_num_symblols_topic">{L_LIVE_SEARCH_MIN_NUM_SYMBLOLS}:</label><br /> 
+		        <dt><label for="live_search_min_num_symblols_topic">{L_LIVE_SEARCH_MIN_NUM_SYMBLOLS}{L_COLON}</label><br /> 
                     <span>{L_LIVE_SEARCH_MIN_NUM_SYMBLOLS_EXPLAIN}</span>
                 </dt>
 		        <dd><input type="number" id="live_search_min_num_symblols_topic" name="live_search_min_num_symblols_topic"  min="1" max="5" value='{LIVE_SEARCH_MIN_NUM_SYMBLOLS_TOPIC}'   /></dd>
 	        </dl>        
             <dl>
-		        <dt><label for="live_search_max_items_to_show_topic">{L_LIVE_SEARCH_MAX_ITEMS_TO_SHOW}:</label><br /> 
+		        <dt><label for="live_search_max_items_to_show_topic">{L_LIVE_SEARCH_MAX_ITEMS_TO_SHOW}{L_COLON}</label><br /> 
                     <span>{L_LIVE_SEARCH_MAX_ITEMS_TO_SHOW_EXPLAIN}</span>
                 </dt>
 		        <dd><input type="number" id="live_search_max_items_to_show_topic" name="live_search_max_items_to_show_topic"  min="1" max="50" value='{LIVE_SEARCH_MAX_ITEMS_TO_SHOW_TOPIC}'   /></dd>
@@ -55,18 +55,18 @@
     </div>
 
 
-   <input type="checkbox" id= "live_search_on_off_user" name="live_search_on_off_user"  class="radio" {CHECKED_USER}  />{L_LIVE_SEARCH_USER_ON}
+   <input type="checkbox" id= "live_search_on_off_user" name="live_search_on_off_user"  class="radio" {CHECKED_USER}  />&nbsp;{L_LIVE_SEARCH_USER_ON}
     <div id='setting_u'>
         <fieldset>
 	        <legend>{L_ACP_LIVE_SEARCH_SETTINGS_USERS}</legend>
             <dl>
-		        <dt><label for="live_search_min_num_symblols_user">{L_LIVE_SEARCH_MIN_NUM_SYMBLOLS}:</label><br /> 
+		        <dt><label for="live_search_min_num_symblols_user">{L_LIVE_SEARCH_MIN_NUM_SYMBLOLS}{L_COLON}</label><br /> 
                     <span>{L_LIVE_SEARCH_MIN_NUM_SYMBLOLS_EXPLAIN}</span>
                 </dt>
 		        <dd><input type="number" id="live_search_min_num_symblols_user" name="live_search_min_num_symblols_user"  min="1" max="5" value='{LIVE_SEARCH_MIN_NUM_SYMBLOLS_USER}'   /></dd>
 	        </dl>        
             <dl>
-		        <dt><label for="live_search_max_items_to_show_user">{L_LIVE_SEARCH_MAX_ITEMS_TO_SHOW}:</label><br /> 
+		        <dt><label for="live_search_max_items_to_show_user">{L_LIVE_SEARCH_MAX_ITEMS_TO_SHOW}{L_COLON}</label><br /> 
                     <span>{L_LIVE_SEARCH_MAX_ITEMS_TO_SHOW_EXPLAIN}</span>
                 </dt>
 		        <dd><input type="number" id="live_search_max_items_to_show_user" name="live_search_max_items_to_show_user"  min="1" max="50" value='{LIVE_SEARCH_MAX_ITEMS_TO_SHOW_USER}'   /></dd>
@@ -74,18 +74,18 @@
         </fieldset>
     </div>   
 
-    <input type="checkbox" id= "live_search_on_off_similartopic" name="live_search_on_off_similartopic"  class="radio" {CHECKED_SIMILARTOPIC}  />{L_LIVE_SEARCH_SIMILARTOPIC_ON}
+    <input type="checkbox" id= "live_search_on_off_similartopic" name="live_search_on_off_similartopic"  class="radio" {CHECKED_SIMILARTOPIC}  />&nbsp;{L_LIVE_SEARCH_SIMILARTOPIC_ON}
    <div id='setting_st'>
         <fieldset>
 	        <legend>{L_ACP_LIVE_SEARCH_SETTINGS_SIMILARTOPICS}</legend>
             <dl>
-		        <dt><label for="live_search_min_num_symblols_user">{L_LIVE_SEARCH_MIN_NUM_SYMBLOLS}:</label><br /> 
+		        <dt><label for="live_search_min_num_symblols_user">{L_LIVE_SEARCH_MIN_NUM_SYMBLOLS}{L_COLON}</label><br /> 
                     <span>{L_LIVE_SEARCH_MIN_NUM_SYMBLOLS_EXPLAIN}</span>
                 </dt>
 		        <dd><input type="number" id="live_search_min_num_symblols_similartopic" name="live_search_min_num_symblols_similartopic"  min="1" max="5" value='{LIVE_SEARCH_MIN_NUM_SYMBLOLS_SIMILARTOPIC}'   /></dd>
 	        </dl>        
             <dl>
-		        <dt><label for="live_search_max_items_to_show_user">{L_LIVE_SEARCH_MAX_ITEMS_TO_SHOW}:</label><br /> 
+		        <dt><label for="live_search_max_items_to_show_user">{L_LIVE_SEARCH_MAX_ITEMS_TO_SHOW}{L_COLON}</label><br /> 
                     <span>{L_LIVE_SEARCH_MAX_ITEMS_TO_SHOW_EXPLAIN}</span>
                 </dt>
 		        <dd><input type="number" id="live_search_max_items_to_show_similartopic" name="live_search_max_items_to_show_similartopic"  min="1" max="50" value='{LIVE_SEARCH_MAX_ITEMS_TO_SHOW_SIMILARTOPIC}'   /></dd>
@@ -97,19 +97,19 @@
     <fieldset>
         <legend></legend>
         <dl>
-			<dt><label for="live_search_show_in_new_window">{L_LIVE_SEARCH_SHOW_IN_NEW_WINDOW}:</label></dt>
+			<dt><label for="live_search_show_in_new_window">{L_LIVE_SEARCH_SHOW_IN_NEW_WINDOW}{L_COLON}</label></dt>
 			<dd><label><input type="radio" name="live_search_show_in_new_window" value="1" <!-- IF LIVE_SEARCH_SHOW_IN_NEW_WINDOW -->checked<!-- ENDIF --> class="radio"> {L_YES}</label><label><input type="radio" name="live_search_show_in_new_window" value="0" <!-- IF !LIVE_SEARCH_SHOW_IN_NEW_WINDOW -->checked<!-- ENDIF --> class="radio"> {L_NO}</label></dd>
 		</dl>
         <dl>
-			<dt><label for="live_search_show_for_guest">{L_LIVE_SEARCH_SHOW_FOR_GUEST}:</label></dt>
+			<dt><label for="live_search_show_for_guest">{L_LIVE_SEARCH_SHOW_FOR_GUEST}{L_COLON}</label></dt>
 			<dd><label><input type="radio" name="live_search_show_for_guest" value="1" <!-- IF LIVE_SEARCH_SHOW_FOR_GUEST -->checked<!-- ENDIF --> class="radio"> {L_YES}</label><label><input type="radio" name="live_search_show_for_guest" value="0" <!-- IF !LIVE_SEARCH_SHOW_FOR_GUEST -->checked<!-- ENDIF --> class="radio"> {L_NO}</label></dd>
 		</dl>
        <dl>
-			<dt><label for="live_search_use_eye_button">{L_LIVE_SEARCH_USE_EYE_BUTTON}:</label></dt>
+			<dt><label for="live_search_use_eye_button">{L_LIVE_SEARCH_USE_EYE_BUTTON}{L_COLON}</label></dt>
 			<dd><label><input type="radio" name="live_search_use_eye_button" value="1" <!-- IF LIVE_SEARCH_USE_EYE_BUTTON -->checked<!-- ENDIF --> class="radio"> {L_YES}</label><label><input type="radio" name="live_search_use_eye_button" value="0" <!-- IF !LIVE_SEARCH_USE_EYE_BUTTON -->checked<!-- ENDIF --> class="radio"> {L_NO}</label></dd>
 		</dl>    
         <dl>
-		    <dt><label for="live_search_exclude_forums">{L_LIVE_SEARCH_EXCLUDE_FORUMS}:</label><br /> 
+		    <dt><label for="live_search_exclude_forums">{L_LIVE_SEARCH_EXCLUDE_FORUMS}{L_COLON}</label><br /> 
                 <span>{L_LIVE_SEARCH_EXCLUDE_FORUMS_EXPLAIN}</span>
             </dt>
 		    <dd><input type="txt" id="live_search_exclude_forums" name="live_search_exclude_forums"   value='{LIVE_SEARCH_EXCLUDE_FORUMS}'  style='width:200px;'  /></dd>
