Add option show/Hide results block after select

--- a/adm/style/event/acp_overall_footer_after.html
+++ b/adm/style/event/acp_overall_footer_after.html
@@ -8,6 +8,7 @@
     var S_USER_PRUNE = '{S_USER_PRUNE}';
     var S_SETTING_USER_LOCAL = '{S_SETTING_USER_LOCAL}';
     var S_FORUM_MANAGE = '{S_FORUM_MANAGE}';
+    var S_FORUM_PARENT_MANAGE = '{S_FORUM_PARENT_MANAGE}';
     var S_FORUM_LOG = '{S_FORUM_LOG}';
     var S_FORUM_MULTIPLE = '{S_FORUM_MULTIPLE}';
     var S_FORUM_PERMISSIONS_COPY = '{S_FORUM_PERMISSIONS_COPY}';
