--- a/adm/style/acp_live_search.html
+++ b/adm/style/acp_live_search.html
@@ -123,6 +123,37 @@
 	        </dl>        
         </fieldset>
     </div>   
+    <input type="checkbox" id= "live_search_on_off_mcp" name="live_search_on_off_mcp"  class="radio" {CHECKED_MCP}  />&nbsp;{L_LIVE_SEARCH_MCP_ON}
+    <div id='setting_mcp'>
+        <fieldset>
+	        <legend>{L_MCP_LIVE_SEARCH_SETTINGS_MCP}</legend>
+            <dl>
+		        <dt><label for="live_search_min_num_symblols_user_mcp">{L_LIVE_SEARCH_MIN_NUM_SYMBLOLS_USERS}{L_COLON}</label><br /> 
+                    <span>{L_LIVE_SEARCH_MIN_NUM_SYMBLOLS_EXPLAIN}</span>
+                </dt>
+		        <dd><input type="number" id="live_search_min_num_symblols_user_mcp" name="live_search_min_num_symblols_mcp_user"  min="1" max="5" value='{LIVE_SEARCH_MIN_NUM_SYMBLOLS_USER_MCP}'   /></dd>
+	        </dl>        
+            <dl>
+		        <dt><label for="live_search_min_num_symblols_mcp_forum">{L_LIVE_SEARCH_MIN_NUM_SYMBLOLS_FORUMS}{L_COLON}</label><br /> 
+                    <span>{L_LIVE_SEARCH_MIN_NUM_SYMBLOLS_EXPLAIN}</span>
+                </dt>
+		        <dd><input type="number" id="live_search_min_num_symblols_mcp_forum" name="live_search_min_num_symblols_mcp_forum"  min="1" max="5" value='{LIVE_SEARCH_MIN_NUM_SYMBLOLS_FORUM_MCP}'   /></dd>
+	        </dl>        
+            <dl>
+		        <dt><label for="live_search_min_num_symblols_mcp_group">{L_LIVE_SEARCH_MIN_NUM_SYMBLOLS_GROUPS}{L_COLON}</label><br /> 
+                    <span>{L_LIVE_SEARCH_MIN_NUM_SYMBLOLS_EXPLAIN}</span>
+                </dt>
+		        <dd><input type="number" id="live_search_min_num_symblols_mcp_group" name="live_search_min_num_symblols_mcp_group"  min="1" max="5" value='{LIVE_SEARCH_MIN_NUM_SYMBLOLS_GROUP_MCP}'   /></dd>
+	        </dl>        
+
+            <dl>
+		        <dt><label for="live_search_max_items_to_show_mcp">{L_LIVE_SEARCH_MAX_ITEMS_TO_SHOW}{L_COLON}</label><br /> 
+                    <span>{L_LIVE_SEARCH_MAX_ITEMS_TO_SHOW_EXPLAIN}</span>
+                </dt>
+		        <dd><input type="number" id="live_search_max_items_to_show_mcp" name="live_search_max_items_to_show_mcp"  min="1" max="50" value='{LIVE_SEARCH_MAX_ITEMS_TO_SHOW_MCP}'   /></dd>
+	        </dl>        
+        </fieldset>
+    </div>   
 
     <fieldset>
         <legend></legend>
@@ -134,6 +165,11 @@
 			<dt><label for="live_search_show_for_guest">{L_LIVE_SEARCH_SHOW_FOR_GUEST}{L_COLON}</label></dt>
 			<dd><label><input type="radio" name="live_search_show_for_guest" value="1" <!-- IF LIVE_SEARCH_SHOW_FOR_GUEST -->checked<!-- ENDIF --> class="radio"> {L_YES}</label><label><input type="radio" name="live_search_show_for_guest" value="0" <!-- IF !LIVE_SEARCH_SHOW_FOR_GUEST -->checked<!-- ENDIF --> class="radio"> {L_NO}</label></dd>
 		</dl>
+        <dl>
+			<dt><label for="live_search_hide_after_select">{L_LIVE_SEARCH_HIDE_AFTER_SELECT}{L_COLON}</label></dt>
+			<dd><label><input type="radio" name="live_search_hide_after_select" value="1" <!-- IF LIVE_SEARCH_HIDE_AFTER_SELECT -->checked<!-- ENDIF --> class="radio"> {L_YES}</label><label><input type="radio" name="live_search_hide_after_select" value="0" <!-- IF !LIVE_SEARCH_HIDE_AFTER_SELECT -->checked<!-- ENDIF --> class="radio"> {L_NO}</label></dd>
+		</dl>
+
         <dl>
 			<dt><label for="live_search_topic_link_type">{L_LIVE_SEARCH_TOPIC_LINK_TYPE}{L_COLON}</label><br />
                 <span>{L_LIVE_SEARCH_TOPIC_LINK_TYPE_EXPLAIN}</span>
