--- a/adm/style/event/acp_overall_footer_after.html
+++ b/adm/style/event/acp_overall_footer_after.html
@@ -1,43 +1,41 @@
 <script type="text/javascript" >
-    var minChars_forum = '{MIN_CHARS_FORUM}';
-    var minChars_user = '{MIN_CHARS_USER}';
-    var U_USER_LS_ACP_PATH = '{U_USER_LS_ACP_PATH}';
+    var minChars_forum = '{{ MIN_CHARS_FORUM }}';
+    var minChars_user = '{{ MIN_CHARS_USER }}';
+    var U_USER_LS_ACP_PATH = '{{ U_USER_LS_ACP_PATH }}';
 
-    var U_ADMIN_LIVESEARCH_PATH = '{U_ADMIN_LIVESEARCH_PATH}';
-    var S_FORUM_PRUNE = '{S_FORUM_PRUNE}';
-    var S_USER_PRUNE = '{S_USER_PRUNE}';
-    var S_SETTING_USER_LOCAL = '{S_SETTING_USER_LOCAL}';
-    var S_FORUM_MANAGE = '{S_FORUM_MANAGE}';
-    var S_FORUM_PARENT_MANAGE = '{S_FORUM_PARENT_MANAGE}';
-    var S_FORUM_LOG = '{S_FORUM_LOG}';
-    var S_FORUM_MULTIPLE = '{S_FORUM_MULTIPLE}';
-    var S_FORUM_PERMISSIONS_COPY = '{S_FORUM_PERMISSIONS_COPY}';
-    var S_USER_GROUP_LOCAL = '{S_USER_GROUP_LOCAL}';
-    var S_GROUP_LOCAL = '{S_GROUP_LOCAL}';
-    var S_FORUM_LOCAL = '{S_FORUM_LOCAL}';
-    var S_SELECT_USER = '{S_SELECT_USER}';
-    var S_CAN_SELECT_USER = '{S_CAN_SELECT_USER}';
-    var S_FIND_USER_ACP = '{S_FIND_USER_ACP}';
-    var S_USER_GROUPS = '{S_USER_GROUPS}';
-    var S_SETTING_USER_GLOBAL = '{S_SETTING_USER_GLOBAL}';
-    var S_GROUP_OPTIONS = '{S_GROUP_OPTIONS}';
-    var S_GROUP_MANAGE = '{S_GROUP_MANAGE}';
-    var S_GROUP_POSITION = '{S_GROUP_POSITION}';
-    var S_USER_BAN = '{S_USER_BAN}';
-    var S_EMAIL = '{S_EMAIL}';
-    var S_ADMIN_GLOBAL = '{S_ADMIN_GLOBAL}';
-    var S_LIVESEARCH_ACP = '{S_LIVESEARCH_ACP}';
-    var LIVE_SEARCH_MAX_ITEMS_TO_SHOW_ACP = '{LIVE_SEARCH_MAX_ITEMS_TO_SHOW_ACP}';
-    var LIVE_SEARCH_MIN_NUM_SYMBLOLS_USER_ACP = '{LIVE_SEARCH_MIN_NUM_SYMBLOLS_USER_ACP}';
-    var LIVE_SEARCH_MIN_NUM_SYMBLOLS_FORUM_ACP = '{LIVE_SEARCH_MIN_NUM_SYMBLOLS_FORUM_ACP}';
-    var LIVE_SEARCH_MIN_NUM_SYMBLOLS_GROUP_ACP = '{LIVE_SEARCH_MIN_NUM_SYMBLOLS_GROUP_ACP}';
-    var L_LIVESEARCH_USER_TXT = '{L_LIVESEARCH_USER_TXT}';
-    var L_LIVESEARCH_USER_T = '{L_LIVESEARCH_USER_T}';
-    //alert({S_LIVESEARCH_ACP});
-
-
+    var U_ADMIN_LIVESEARCH_PATH = '{{ U_ADMIN_LIVESEARCH_PATH }}';
+    var S_FORUM_PRUNE = '{{ S_FORUM_PRUNE }}';
+    var S_USER_PRUNE = '{{ S_USER_PRUNE }}';
+    var S_SETTING_USER_LOCAL = '{{ S_SETTING_USER_LOCAL }}';
+    var S_FORUM_MANAGE = '{{ S_FORUM_MANAGE }}';
+    var S_FORUM_PARENT_MANAGE = '{{ S_FORUM_PARENT_MANAGE }}';
+    var S_FORUM_LOG = '{{ S_FORUM_LOG }}';
+    var S_FORUM_MULTIPLE = '{{ S_FORUM_MULTIPLE }}';
+    var S_FORUM_PERMISSIONS_COPY = '{{ S_FORUM_PERMISSIONS_COPY }}';
+    var S_USER_GROUP_LOCAL = '{{ S_USER_GROUP_LOCAL }}';
+    var S_GROUP_LOCAL = '{{ S_GROUP_LOCAL }}';
+    var S_FORUM_LOCAL = '{{ S_FORUM_LOCAL }}';
+    var S_SELECT_USER = '{{ S_SELECT_USER }}';
+    var S_CAN_SELECT_USER = '{{ S_CAN_SELECT_USER }}';
+    var S_FIND_USER_ACP = '{{ S_FIND_USER_ACP }}';
+    var S_USER_GROUPS = '{{ S_USER_GROUPS }}';
+    var S_SETTING_USER_GLOBAL = '{{ S_SETTING_USER_GLOBAL }}';
+    var S_GROUP_OPTIONS = '{{ S_GROUP_OPTIONS }}';
+    var S_GROUP_MANAGE = '{{ S_GROUP_MANAGE }}';
+    var S_GROUP_POSITION = '{{ S_GROUP_POSITION }}';
+    var S_USER_BAN = '{{ S_USER_BAN }}';
+    var S_EMAIL = '{{ S_EMAIL }}';
+    var S_ADMIN_GLOBAL = '{{ S_ADMIN_GLOBAL }}';
+    var S_LIVESEARCH_ACP = '{{ S_LIVESEARCH_ACP }}';
+    var LIVE_SEARCH_MAX_ITEMS_TO_SHOW_ACP = '{{ LIVE_SEARCH_MAX_ITEMS_TO_SHOW_ACP }}';
+    var LIVE_SEARCH_MIN_NUM_SYMBLOLS_USER_ACP = '{{ LIVE_SEARCH_MIN_NUM_SYMBLOLS_USER_ACP }}';
+    var LIVE_SEARCH_MIN_NUM_SYMBLOLS_FORUM_ACP = '{{ LIVE_SEARCH_MIN_NUM_SYMBLOLS_FORUM_ACP }}';
+    var LIVE_SEARCH_MIN_NUM_SYMBLOLS_GROUP_ACP = '{{ LIVE_SEARCH_MIN_NUM_SYMBLOLS_GROUP_ACP }}';
+    var L_LIVESEARCH_USER_TXT = "{{ lang('LIVESEARCH_USER_TXT') }}";
+    var L_LIVESEARCH_USER_T = "{{ lang('LIVESEARCH_USER_T') }}";
+	alert(S_ADMIN_GLOBAL)
 </script>
-<!-- IF S_LIVESEARCH_ACP -->
-    <!-- INCLUDEJS @alg_liveSearch/jquery.autocomplete.js -->
-<!-- ENDIF -->
-<!-- INCLUDEJS @alg_liveSearch/acp_live_search.js -->
+{% if S_LIVESEARCH_ACP %}
+    {% INCLUDEJS '@alg_liveSearch/jquery.autocomplete.js' %}
+{% endif %}
+{% INCLUDEJS '@alg_liveSearch/acp_live_search.js' %}
