--- a/adm/style/event/acp_groups_manage_before.html
+++ b/adm/style/event/acp_groups_manage_before.html
@@ -1,13 +1,12 @@
-<!-- IF S_GROUP_MANAGE -->
+{% if S_GROUP_MANAGE %}
     <div style="text-align: left;">
-            <lable for="groupsearch_ls">{L_LIVE_SEARCH_CAPTION}{L_COLON}</lable>
-            <input id="groupsearch_ls" class="inputbox search ls-groupsearch" type='search'   placeholder="{L_LIVE_SEARCH_GROUP_TXT}"  title="{L_LIVE_SEARCH_GROUP_T}" autocomplete="off" />
+            <label for="groupsearch_ls">{{ lang('LIVE_SEARCH_CAPTION') }}{{ lang('COLON') }}</label>
+            <input id="groupsearch_ls" class="inputbox search ls-groupsearch" type='search'   placeholder="{{ lang('LIVE_SEARCH_GROUP_TXT') }}"  title="{{ lang('LIVE_SEARCH_GROUP_T') }}" autocomplete="off" />
             <div>
-                <input name="group_manage" type="radio" class="radio" value="0" checked />{L_OPTIONS}
-                <input name="group_manage" type="radio" class="radio" value="1"  />{L_TOTAL_MEMBERS}
-                <input name="group_manage" type="radio" class="radio" value="2"  />{L_DELETE}
-                <input id="btnGroupManage" type="submit" class="button2"  value="{L_SUBMIT}" />
+                <input name="group_manage" type="radio" class="radio" value="0" checked />{{ lang('OPTIONS') }}
+                <input name="group_manage" type="radio" class="radio" value="2"  />{{ lang('DELETE') }}
+                <input id="btnGroupManage" type="submit" class="button2"  value="{{ lang('SUBMIT') }}" />
                 <input id="hGroupManage" type="hidden" />
             </div>
     </div>
-    <!-- ENDIF -->
+    {% endif %}
