--- a/adm/style/event/acp_permissions_select_forum_append.html
+++ b/adm/style/event/acp_permissions_select_forum_append.html
@@ -1,3 +1,3 @@
-<!-- IF S_FORUM_MULTIPLE -->
-    <div><input id="forumPermMultipleSubforumSearch" class="inputbox search ls-forumsearch" type='search'   placeholder="{L_LIVE_SEARCH_FORUM_TXT}"  title="{L_LIVE_SEARCH_FORUM_TXT}" autocomplete="off" /></div>
-<!-- ENDIF -->
+{% if S_FORUM_MULTIPLE %}
+    <div><input id="forumPermMultipleSubforumSearch" class="inputbox search ls-forumsearch" type='search'   placeholder="{{ lang('LIVE_SEARCH_FORUM_TXT') }}"  title="{{ lang('LIVE_SEARCH_FORUM_TXT') }}" autocomplete="off" /></div>
+{% endif %}
