--- a/adm/style/event/acp_permissions_select_multiple_forum_append.html
+++ b/adm/style/event/acp_permissions_select_multiple_forum_append.html
@@ -1,6 +1,6 @@
-<!-- IF S_FORUM_MULTIPLE -->
+{% if S_FORUM_MULTIPLE %}
     <div>
-        <lable for="forumPermMultipleSearch">{L_LIVE_SEARCH_CAPTION}{L_COLON}</lable>
-        <input id="forumPermMultipleSearch" class="ls-acp-search inputbox search ls-forumsearch" type='search'   placeholder="{L_LIVE_SEARCH_FORUM_TXT}"  title="{L_LIVE_SEARCH_FORUM_T}" autocomplete="off" />
+        <label for="forumPermMultipleSearch">{{ lang('LIVE_SEARCH_CAPTION') }}{{ lang('COLON') }}</label>
+        <input id="forumPermMultipleSearch" class="ls-acp-search inputbox search ls-forumsearch" type='search'   placeholder="{{ lang('LIVE_SEARCH_FORUM_TXT') }}"  title="{{ lang('LIVE_SEARCH_FORUM_T') }}" autocomplete="off" />
     </div>
-<!-- ENDIF -->
+{% endif %}
